--- a/student.html
+++ b/student.html
@@ -17,10 +17,11 @@ let wrapper = document.getElementById("wrapper");
 let navbar   = ["Id","Name","Class","City",,"Roll No","Contact No"];
 
 let Students = [
-        ["1","Shahid", "CS", "Jaranwala", "0165", "+923387412"],
-        ["2","Zain"  , "IT", "Jaranwala", "0125", "+923387412"],
-        ["3","Ali"   , "Math", "Faisalabad", "0166", "+923457891"],
-        ["4","Fahad" , "Science", "Faisalabad", "0199", "+923457891"]
+        ["1","Jack", "CS", "Jaranwala", "0165", "+923387412"],
+        ["2","Harry"  , "IT", "Jaranwala", "0125", "+923387412"],
+        ["3","Jhon"   , "Math", "Faisalabad", "0166", "+923457891"],
+        ["4","Vicky" , "Science", "Faisalabad", "0199", "+923457891"]
+        ["5","Honey" , "English", "Amirica", "0129", "+923877891"]
 ];
 
 
